--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
             "IgnasiMG\\Tests\\BigDataUtils\\": "tests/"
         }
     },
-    "require": {},
+    "require": {
+        "php": ">= 7.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
     }
