--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,11 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
+    },
+    "scripts": {
+        "test": [
+            "@composer install",
+            "php vendor/bin/phpunit"
+        ]
     }
 }
